# Volatility-Fitter

./: .gitignore  CLAUDE.md  DESKTOP.md  README.md  ROADMAP.md  build_exe.ps1  restart.local.ps1.example  restart.ps1  volfit.spec
backend/: capture_benchmark.py  capture_massive_weekly.py  demo.py  desktop.py  lqd_tail_study.py  lv_benchmark.py  massive_diag.py  pyproject.toml  serve.py  snapshot.py
backend/backtest/: .gitignore  FINDINGS_ablation_arb.md  FINDINGS_calibration_arb.md  FINDINGS_dynamic_phase5.md  FINDINGS_graph_loo.md  FINDINGS_message_phase0.md  FINDINGS_message_phase4.md  FINDINGS_observation_filter.md  FINDINGS_prior_temporal.md  README.md  SPEC.md  __init__.py  ablation_arb.py  analyze.py  benchmark_compare.py  benchmark_pack.py  capture.py  capture_intraday.py  capture_intraday_rest.py  certification.py  dispatch.py  graph_edges.py  graph_loo.py  learn_betas.py  measure_capture.py  message_phase0.py  observation_filter.py  observation_filter_intraday.py  probe_flatfiles.py  probe_rest.py  quotes_store.py  replay.py  rest_quotes.py  run_b14_adjudication.ps1  run_benchmark_pack.ps1  run_capture_full.ps1  run_capture_intraday.ps1  run_capture_rest.ps1  run_compute.py  run_dynamic_adjudication.ps1  (+6 more)
backend/tests/: benchmarks.py  conftest.py  test_ablation_arb.py  test_activity.py  test_affine_basket.py  test_affine_diag.py  test_affine_early_stop.py  test_affine_gn.py  test_affine_grid.py  test_affine_grid_design.py  test_affine_march.py  test_affine_phi_budget.py  test_affine_time_scheme.py  test_affine_warm_start.py  test_american.py  test_american_numba.py  test_api.py  test_api_affine.py  test_api_affine_views.py  test_api_analytics.py  test_api_charts.py  test_api_edits.py  test_api_events.py  test_api_forwards.py  test_api_graph.py  test_api_history.py  test_api_lit.py  test_api_localvol.py  test_api_massive_iv.py  test_api_options.py  test_api_settings.py  test_api_settings_defaults.py  test_api_spot.py  test_api_stacked.py  test_api_term_dividends.py  test_api_universe.py  test_api_workflow.py  test_asof.py  test_backtest_arb.py  test_band_fit.py  (+140 more)
backend/tests/fixtures/: graph_dynamic_golden.json  graph_message_golden.json  intraday_spy_0dte.json  lv_benchmark_bloomberg.json  lv_weekly_massive.json
backend/volfit/: __init__.py  replay_report.py
backend/volfit/api/: __init__.py  activity.py  affine_diag.py  affine_fit.py  affine_transport.py  affine_views.py  analytics.py  app.py  asof.py  carry.py  data_age.py  datasource.py  displayed.py  edits.py  event_autocalib.py  export.py  export_inputs.py  export_report.py  filter_mode.py  fit_models.py  fit_pool.py  fit_uncertainty.py  frontend.py  graph_backtest.py  graph_band.py  graph_blocks.py  graph_dynamic.py  graph_extrapolation.py  graph_lv.py  graph_message.py  graph_nodes.py  graph_preflight.py  graph_reconstruct.py  graph_select.py  graph_service.py  graph_universe.py  history.py  jobs.py  localvol.py  market.py  (+29 more)
backend/volfit/calib/: __init__.py  band.py  calendar.py  convex_deam.py  event_autocalib.py  event_time.py  extrap.py  factors.py  fit_task.py  intraday_time.py  observation_filter.py  observation_measurement.py  operators.py  precision.py  prior.py  rms.py  surface.py  symmetric.py  symmetric_stack.py  varswap.py  weighted_time.py  weights.py
backend/volfit/core/: __init__.py  american.py  american_numba.py  black.py
backend/volfit/data/: __init__.py  bloomberg.py  bloomberg_history.py  bloomberg_parse.py  bloomberg_search.py  carry_solve.py  columnar.py  dividends.py  expiries.py  expiry_select.py  expiry_time.py  fieldmap.py  flatfiles.py  forwards.py  governance.py  massive.py  massive_ws.py  occ.py  provider.py  store.py  symbols.py  types.py  (+2 more)
(+447 files in other folders)
