[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volfit"
version = "0.1.0"
description = "Implied volatility fitter with graph-based smile extrapolation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    # Compiled LV Dupire march (~6x the banded path; volfit.models.localvol.affine_march).
    # Imported behind a guard with an automatic banded fallback, so a missing/failed
    # numba degrades gracefully rather than breaking the calibration.
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Everything needed to run the full test suite (TestClient needs httpx; the
# Yahoo provider tests build pandas frames). yfinance is only used by the
# opt-in live test and is intentionally left out of the default CI install.
test = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pandas>=2.0",
]
# Live market-data providers (optional, not installed in CI). Massive needs
# httpx; Bloomberg needs xbbg + blpapi + a running Terminal (blpapi ships on
# Bloomberg's own index: pip install --index-url
# https://blpapi.bloomberg.com/repository/releases/python/simple/ blpapi).
providers = [
    "httpx>=0.27",
    "yfinance>=0.2",
    "xbbg>=0.7",
    "blpapi>=3.24",
]
# Flat-file history (ROADMAP Tier 2): DuckDB (bundled httpfs) reads the
# Massive/Polygon S3 aggregate flat files and caches them to local Parquet.
# Optional + imported lazily, so the core runs without it (tests importorskip).
flatfiles = [
    "duckdb>=1.1",
]

[tool.setuptools.packages.find]
include = ["volfit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance budget checks (timing-sensitive; see tests/test_perf.py)",
    "live: hits a live network provider (opt-in via VOLFIT_LIVE=1)",
]

[tool.ruff]
line-length = 100
